Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-33164

Opening files from Finder only works if Qt Creator is already running

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: P3: Somewhat important P3: Somewhat important
    • Qt Creator 17.0.1
    • Qt Creator 16.0.2, Qt Creator 17.0.0
    • All Other Issues
    • None
    • macOS Sequoia, ARM
    • macOS
    • 85ef1f2bc (17.0)

      Launching Qt Creator by opening a file in Finder that is configured by macOS to be opened with Qt Creator will start Qt Creator but ignore the file used for initiating the launch.

      Steps to reproduce

      1. Go to a Qt project in the Finder
      2. Make sure Qt Creator is not already running
      3. Open the project, by double-clicking the file, e.g., a *.pro file

      Expected behavior

      Qt Creator launches and opens the project

      Observed behavior

      Qt Creator launches, but does not open the project. There is a small window with a progress bar shown for the license check and Qt Creator launches as if you would launch it by just starting the application instead of opening a file.

      Note that if Qt Creator is already running, opening a file from Finder opens the project in Qt Creator as expected.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            con Eike Ziller
            blochberger.max Maximilian Blochberger
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes